<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".WorkoutListActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/none"
        android:scrollbarSize="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingTop="30dp"
            android:paddingEnd="40dp"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/workoutsListTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato_bold"
                    android:includeFontPadding="true"
                    android:text="@string/list_workouts_title"
                    android:textColor="?colorOnPrimary"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/homeButton"
                    android:layout_width="50dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:cropToPadding="false"
                    android:foregroundGravity="clip_vertical"
                    app:srcCompat="@drawable/home_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/workoutsBarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchWorkout"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:clipToPadding="false"
                    android:iconifiedByDefault="true"
                    android:layoutDirection="rtl"
                    android:queryHint="@string/search_workouts"
                    android:searchIcon="@drawable/ic_baseline_search_30" />

                <ImageView
                    android:id="@+id/addWorkoutsButton"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/none"
                    android:cropToPadding="false"
                    android:foreground="?attr/selectableItemBackground"
                    app:srcCompat="@drawable/ic_baseline_add_48" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/workoutsListLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/workoutMenuCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradient_1"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/editWorkoutLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_popup"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp"
            android:paddingBottom="40dp"
            android:visibility="invisible"
            tools:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/closeWorkoutMenu2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/none"
                    android:foregroundGravity="center_vertical"
                    android:layoutDirection="ltr"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_baseline_close_48"
                    tools:visibility="invisible" />

                <TextView
                    android:id="@+id/workoutMenuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:letterSpacing="0.05"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/missing"
                    android:textAlignment="center"
                    android:textColor="?colorOnPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/closeWorkoutMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="0.25"
                    android:contentDescription="@string/none"
                    android:foregroundGravity="center_vertical"
                    android:layoutDirection="ltr"
                    app:srcCompat="@drawable/ic_baseline_close_48" />
            </LinearLayout>

            <Button
                android:id="@+id/modifyWorkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/lato_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="35dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/modify_workout"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:iconPadding="0dp"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/deleteWorkoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/lato_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="35dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/delete_workout"
                android:textAlignment="center"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:iconPadding="0dp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/addWorkoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_popup"
            android:orientation="vertical"
            android:paddingStart="35dp"
            android:paddingTop="50dp"
            android:paddingEnd="35dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/WorkoutText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/add_workout_title"
                    android:textAllCaps="false"
                    android:textColor="?colorOnPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/addWorkoutClose"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/none"
                    app:srcCompat="@drawable/ic_baseline_close_48" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:boxBackgroundColor="#00FFFFFF"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/workoutNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:defaultFocusHighlightEnabled="true"
                    android:fontFamily="@font/lato_bold"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hapticFeedbackEnabled="true"
                    android:hint="@string/add_workout_hint"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="?colorOnPrimary"
                    android:textColorHighlight="?colorOnPrimary"
                    android:textColorHint="?colorOnPrimary"
                    android:textColorLink="?colorOnPrimary"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirmAddWorkoutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/lato"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/add_confirm"
                android:textColor="?colorOnPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>