...
                android:paddingStart="20dp"
                android:paddingTop="30dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/workoutDisplayNameList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    android:layout_weight="0.35"
...
